# cloudsync

./: .cloudsyncignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml  install.sh
.claude/skills/: commit.md
.github/workflows/: ci.yml  deploy.yml  release.yml
caddy/: Caddyfile
crates/cloudsync-client/: Cargo.toml
crates/cloudsync-client/src/: cli.rs  client.rs  config.rs  db.rs  lib.rs  main.rs  scanner.rs  sync.rs  ui.rs
crates/cloudsync-client/src/sync/: core.rs  mock_client.rs  mod.rs  pull.rs  push.rs  status.rs
crates/cloudsync-client/tests/: integration_test.rs
crates/cloudsync-common/: Cargo.toml
crates/cloudsync-common/src/: lib.rs  upload.rs
crates/cloudsync-server/: Cargo.toml
crates/cloudsync-server/src/: app.rs  cli.rs  config.rs  db.rs  db_upload.rs  lib.rs  main.rs  storage.rs  ui.rs
crates/cloudsync-server/static/: style.css
crates/cloudsync-server/templates/: base.html  browser.html  login.html
crates/cloudsync-server/tests/: integration_test.rs
docs/: roadmap.md  server-setup.md
docs/archive/: plan-web-ui.md
scripts/: BENCH_RESULTS.md  bench-upload.sh
