[workspace]
members = [
    "crates/cloudsync-common",
    "crates/cloudsync-server",
    "crates/cloudsync-client",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
blake3 = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
redb = { version = "2.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
clap = { version = "4.0", features = ["derive", "env"] }
toml = { version = "0.8" }
anyhow = { version = "1.0" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
