[package]
name = "cloudsync-client"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudsync-common = { path = "../cloudsync-common" }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
redb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
