[package]
name = "cloudsync-client"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudsync-common = { path = "../cloudsync-common" }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
redb = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

[dev-dependencies]
cloudsync-server = { path = "../cloudsync-server" }
tempfile = "3"
axum = "0.8"
