[package]
name = "cloudsync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudsync-common = { path = "../cloudsync-common" }
axum = { workspace = true }
tokio = { workspace = true }
redb = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
nanoid = "0.4"

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
